stdout.txt
Lmod has detected the following error: The following module(s) are unknown:
"cuda/11.7"

Please check the spelling or version number. Also try "module spider ..."
It is also possible your cache file is out-of-date; it may help to try:
  $ module --ignore_cache load "cuda/11.7"

Also make sure that all modulefiles written in TCL start with the string
#%Module



Lmod has detected the following error: The following module(s) are unknown:
"cudnn/8.3"

Please check the spelling or version number. Also try "module spider ..."
It is also possible your cache file is out-of-date; it may help to try:
  $ module --ignore_cache load "cudnn/8.3"

Also make sure that all modulefiles written in TCL start with the string
#%Module



Lmod has detected the following error: The following module(s) are unknown:
"python/3.10"

Please check the spelling or version number. Also try "module spider ..."
It is also possible your cache file is out-of-date; it may help to try:
  $ module --ignore_cache load "python/3.10"

Also make sure that all modulefiles written in TCL start with the string
#%Module



  File "/home/ew640340/Ph.D./Foundation_Models/Train_Val.py", line 713
    save_best=True
    ^^^^^^^^^^^^^^
SyntaxError: keyword argument repeated: save_best
srun: error: n23g0003: task 0: Exited with exit code 1
